fix(02): revise plans based on checker feedback

--- a/.planning/phases/02-axon-registration/02-01-PLAN.md
+++ b/.planning/phases/02-axon-registration/02-01-PLAN.md
@@ -17,9 +17,9 @@ requirements: [NREG-05, NREG-07]
 
 must_haves:
   truths:
-    - "Registration state tables exist in SQLite after migration v2 runs"
-    - "NeuronConfig schema includes an axon section with registryUrl, endpointUrl, backoffCeilingMs"
-    - "Mock Axon server starts as a standalone process and responds to registration API calls"
+    - "A Neuron initialized from config has registration tables that Plans 02-02 and 02-03 can read and write without schema errors"
+    - "Plans 02-02 and 02-04 can read axon.registryUrl, axon.endpointUrl, and axon.backoffCeilingMs from NeuronConfig without type errors"
+    - "Registration and heartbeat tests can start a standalone mock Axon server and exercise the full Axon API contract"
   artifacts:
     - path: "src/types/registration.ts"
       provides: "TypeBox schemas for NeuronRegistrationState and ProviderRegistration"
