--- a/.planning/phases/02-axon-registration/02-02-PLAN.md
+++ b/.planning/phases/02-axon-registration/02-02-PLAN.md
@@ -22,6 +22,7 @@ must_haves:
     - "HeartbeatManager resets to healthy interval after Axon recovers"
     - "Registration state persists in SQLite and survives process restart"
     - "When Axon is unreachable, the Neuron continues operating in degraded mode"
+    - "A machine-readable neuron.health.json file is written on every heartbeat status change for external monitoring"
   artifacts:
     - path: "src/registration/axon-client.ts"
       provides: "Thin HTTP wrapper for Axon registry API"
@@ -30,8 +31,8 @@ must_haves:
       provides: "SQLite read/write for registration state"
       exports: ["RegistrationStateStore"]
     - path: "src/registration/heartbeat.ts"
-      provides: "Heartbeat loop with exponential backoff"
-      exports: ["HeartbeatManager"]
+      provides: "Heartbeat loop with exponential backoff and health metric file writer"
+      exports: ["HeartbeatManager", "HEARTBEAT_INTERVAL_MS", "writeHealthFile"]
     - path: "src/registration/service.ts"
       provides: "Orchestrator coordinating client, state, and heartbeat"
       exports: ["AxonRegistrationService"]
@@ -152,20 +153,31 @@ Note: Bearer token is stored in `neuron_registration.axon_bearer_token`. It is s
   </files>
   <action>
 1. Create `src/registration/heartbeat.ts`:
+   - Define and export `const HEARTBEAT_INTERVAL_MS = 60_000` at module level (per locked decision: 60-second heartbeat interval, fixed, not configurable)
    - Export `HeartbeatManager` class:
-     - Constructor: `(client: AxonClient, stateStore: RegistrationStateStore, intervalMs: number, backoffCeilingMs: number, onStatusChange?: (status: 'healthy' | 'degraded') => void)`
-     - `start(): void` — set `isRunning = true`, schedule first beat at `intervalMs`
+     - Constructor: `(client: AxonClient, stateStore: RegistrationStateStore, backoffCeilingMs: number, onStatusChange?: (status: 'healthy' | 'degraded') => void)`
+     - Note: the heartbeat interval is NOT a constructor parameter — it uses the module constant `HEARTBEAT_INTERVAL_MS` directly. This enforces the locked decision that it is fixed, not configurable.
+     - `start(): void` — set `isRunning = true`, schedule first beat at `HEARTBEAT_INTERVAL_MS`
      - `stop(): void` — set `isRunning = false`, clear any pending timeout
      - `getStatus(): 'healthy' | 'degraded'` — return current status based on `attempt` counter (0 = healthy, >0 = degraded)
      - Private `scheduleNext(delayMs: number)`: use `setTimeout` (not `setInterval`) for dynamic delay adjustment
      - Private `async beat()`:
        1. If not running, return
        2. Load registration state from stateStore
-       3. If no state or status !== 'registered', schedule next at intervalMs and return
-       4. Try: call `client.updateEndpoint(registrationId, { neuron_endpoint_url })`, reset `attempt = 0`, update stateStore heartbeat timestamp, call `onStatusChange?.('healthy')` if transitioning from degraded, schedule next at `intervalMs`
+       3. If no state or status !== 'registered', schedule next at `HEARTBEAT_INTERVAL_MS` and return
+       4. Try: call `client.updateEndpoint(registrationId, { neuron_endpoint_url })`, reset `attempt = 0`, update stateStore heartbeat timestamp, call `onStatusChange?.('healthy')` if transitioning from degraded, schedule next at `HEARTBEAT_INTERVAL_MS`
        5. Catch: increment `attempt`, calculate backoff: `Math.min(backoffCeilingMs, Math.pow(2, attempt) * 5000 * Math.random())` (full jitter per research recommendation), call `onStatusChange?.('degraded')` if first failure, schedule next at backoffMs
-   - Per locked decision: 60-second interval (passed in, but fixed by caller). Backoff ceiling configurable (default 5 min from config).
+   - Per locked decision: 60-second interval via `HEARTBEAT_INTERVAL_MS` constant (fixed, not configurable). Backoff ceiling configurable (default 5 min from config).
    - Per locked decision: Auto re-register when Axon comes back — if `updateEndpoint` returns 404 (registration lost), call `onRegistrationLost` callback so the service can re-register.
+
+   **Health metric file (per locked decision: "exposed health metric for monitoring systems"):**
+   - Export function `writeHealthFile(dataDir: string, status: 'healthy' | 'degraded', lastHeartbeat?: string): void`
+     - Writes `neuron.health.json` to `dataDir` (same directory as the SQLite DB)
+     - File contents: `{ "status": "healthy"|"degraded", "last_heartbeat_at": "<ISO string>"|null, "updated_at": "<ISO string>" }`
+     - Use `writeFileSync` (atomic enough for a status file, non-blocking not needed for a small JSON write)
+     - This file is machine-readable and can be polled by external monitoring systems (e.g., Prometheus node exporter, custom health checks)
+   - The `onStatusChange` callback in HeartbeatManager is the trigger — AxonRegistrationService wires it to call `writeHealthFile` on every status transition
+   - Also call `writeHealthFile` after each successful heartbeat (to update `last_heartbeat_at` even when status doesn't change)
 
 2. Create `src/registration/service.ts`:
    - Export `AxonRegistrationService` class:
@@ -178,7 +190,7 @@ Note: Bearer token is stored in `neuron_registration.axon_bearer_token`. It is s
        4. If status === 'registered' and registration_id exists: skip registration, set bearer token on client, proceed to heartbeat (per research pitfall 6: idempotency on restart)
        5. If status !== 'registered': call `client.registerNeuron(...)` with org details from config, save state with registration_id and bearer_token, audit log `action: 'registration.neuron_registered'` (do NOT include bearer_token in audit details per pitfall 7)
        6. Also re-register any existing providers from state (they survive restart per NREG-05)
-       7. Start heartbeat with `config.heartbeat.intervalMs` and `config.axon.backoffCeilingMs`
+       7. Create HeartbeatManager with `config.axon.backoffCeilingMs` (interval is the fixed `HEARTBEAT_INTERVAL_MS` constant from heartbeat.ts, not a config value). Pass `onStatusChange` callback that calls `writeHealthFile(dataDir, status, lastHeartbeat)` to write `neuron.health.json` (per locked decision: exposed health metric for monitoring systems). Start heartbeat.
      - `async stop(): Promise<void>` — stop heartbeat
      - `async addProvider(npi: string): Promise<void>` — call `client.registerProvider(...)`, save to stateStore, audit log `action: 'registration.provider_added'`
      - `async removeProvider(npi: string): Promise<void>` — call `client.removeProvider(...)`, remove from stateStore, audit log `action: 'registration.provider_removed'`
@@ -187,7 +199,7 @@ Note: Bearer token is stored in `neuron_registration.axon_bearer_token`. It is s
    - Handle network errors gracefully in start(): if Axon unreachable on first start, log warning and enter degraded mode (do not crash — per NREG-06)
 
 3. Create `src/registration/index.ts`:
-   - Barrel export: `AxonRegistrationService`, `AxonClient`, `AxonError`, `RegistrationStateStore`, `HeartbeatManager`
+   - Barrel export: `AxonRegistrationService`, `AxonClient`, `AxonError`, `RegistrationStateStore`, `HeartbeatManager`, `HEARTBEAT_INTERVAL_MS`, `writeHealthFile`
 
 4. Create `src/registration/registration.test.ts`:
    - Use MSW `setupServer` for HTTP interception in AxonClient tests:
@@ -203,7 +215,7 @@ Note: Bearer token is stored in `neuron_registration.axon_bearer_token`. It is s
      - removeProvider
      - load returns null when no registration exists
    - HeartbeatManager tests:
-     - Calls updateEndpoint on interval (use vi.useFakeTimers)
+     - Calls updateEndpoint at HEARTBEAT_INTERVAL_MS (60s) intervals (use vi.useFakeTimers)
      - Enters backoff on failure (verify delay increases)
      - Resets attempt on success after failure
      - Stops cleanly
@@ -212,14 +224,18 @@ Note: Bearer token is stored in `neuron_registration.axon_bearer_token`. It is s
      - start() skips registration on restart if already registered (idempotency)
      - addProvider registers with Axon and persists
      - removeProvider unregisters and removes from state
+   - writeHealthFile tests:
+     - Writes neuron.health.json with correct structure (status, last_heartbeat_at, updated_at)
+     - File is valid JSON parseable by external tools
    - Import `SqliteStorage` from storage module for in-memory DB setup, call `storage.initialize()` to run migrations before each test
   </action>
   <verify>
     `pnpm test` passes all tests (existing Phase 1 tests + new registration tests). `pnpm build` compiles cleanly.
   </verify>
   <done>
-    - HeartbeatManager maintains reachable status with 60s interval, enters exponential backoff (base 5s, full jitter, configurable ceiling) on failure, auto-recovers
+    - HeartbeatManager maintains reachable status with 60s interval (via HEARTBEAT_INTERVAL_MS constant), enters exponential backoff (base 5s, full jitter, configurable ceiling) on failure, auto-recovers
     - AxonRegistrationService orchestrates registration lifecycle: initial registration, restart idempotency, provider management, graceful degradation
+    - `writeHealthFile` writes `neuron.health.json` to data directory on every heartbeat status change (machine-readable health metric for monitoring systems per locked decision)
     - All registration components have unit tests with MSW HTTP mocking and in-memory SQLite
     - Bearer token is never logged or included in audit entries
   </done>
